[package]
name = "prime-ministers"
version = "0.1.1"
edition = "2018"
description = "File Explorer with Dioxus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
dioxus-sortable = "0.1.2"
dioxus-web = "0.4.0"
log = "0.4.14"
open = "5.0.0"
simple_logger = "4.2.0"


[package.metadata.bundle]
name = "Dioxus Purchase Tracker"
identifier = "com.doe.exampleapplication"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example purchase-tracking application."
long_description = """
"""
osx_frameworks = []
